# tutorials

./: .gitmodules
airflow-tutorials/: Dockerfile  README.md  airflow.cfg  airflow.db  docker-compose.yaml  pyproject.toml  requirements.txt  test.py
airflow-tutorials/dags/: create_dag_with_python_operator.py  dag_with_catchup_and_backfill.py  dag_with_cron_expression.py  dag_with_postgres_operator.py  dag_with_python_dependencies.py  dag_with_taskflow_api.py  our_first_dag.py
bash-scripting/: script.md
data-engineering/: README.md  compose.yaml  sql.md  test.py
data-engineering/dbt-env/: pyproject.toml
data-engineering/elt/: Dockerfile
data-engineering/sql_project/: project.md
gcp-tutorials/: pyproject.toml
java-tutorials/: ATM.java  Bicycle.java  CashRegister.java  Combining.java  Computer.java  Continents.java  DNA.java  Dog.java  FileManager.java  FizzBuzz.java  Index.java  Item.java  LuckyFive.java  Lunch.java  Main.java  MostExpensive.java  Numbers.java  Person.java  Playlist.java  PrimeDirective.java  Queue.java  README.MD  Review.java  ScopeExample.java  SomeClass.java  Store.java  example.txt  test.java
java-tutorials/BHS/: BHS.java
java-tutorials/examples/: BankAccount.java  CheckingAccount.java  (+1 more)
kubernetes-tutorials/: README.md  pyproject.toml
machine-learning/: ml.ipynb  ml.py  ml_intermediate.ipynb  plot_loss.py  tum_ml.py
pgvector-tutorials/: .env  pyproject.toml
pgvector-tutorials/app/: main.ipynb  main.py
python-tutorials/: billing.db  createview.py  decorator.py  gotcha.ipynb  intermediate.py  markdown.md  mongoDB.md  test.sql
(+30 files in other folders)
