[tool.poetry]
name = "docker"
version = "0.1.0"
description = ""
authors = ["jaden <jaden.b.jeong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
