[tool.poetry]
name = "pgvector-tutorial"
version = "0.1.0"
description = ""
authors = ["jaden <jaden.b.jeong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
openai = "^1.6.1"
tiktoken = "^0.5.2"
sentence-transformers = "^2.2.2"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.4"
langchain = "^0.0.352"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
